Modifiqué el color de fondo del archivo html

--- a/Practica de MODELO DE CAJA.html
+++ b/Practica de MODELO DE CAJA.html
@@ -8,7 +8,7 @@
     <style>
         /* Estilo para el encabezado */
         header {
-            background-color: whitesmoke;
+            background-color: blue;
             /* Color de fondo */
             color: black;
             /* Color del texto */
