Cambie la fecha a la de hoy

--- a/Practica de MODELO DE CAJA.html
+++ b/Practica de MODELO DE CAJA.html
@@ -93,7 +93,7 @@
 <body>
     <header>
         <h1><a href="https://www.heraldo.mx/">El Heraldo</a></h1>
-        <p><span class="informacion-local">INFORMACIÓN LOCAL</span> / DOMINGO 17 de MARZO DE 2024</p>
+        <p><span class="informacion-local">INFORMACIÓN LOCAL</span> / SABADO 25 de MAYO DE 2024</p>
     </header>
     <hr>
 
